--- a/partials/header.html
+++ b/partials/header.html
@@ -4,7 +4,7 @@
   <header class="site-header">
    <div class="header-top-border"></div>
    <div class="header-content">
-    <div class="logo-container"><a href="index.html"><img src="../assets/images/faicon.svg" alt="โลโก้คริสตจักร" class="church-logo" onerror="this.style.display='none';"></a>
+    <div class="logo-container"><a href="https://www.tannatthaphon.online/index"><img src="https://www.tannatthaphon.online/assets/images/faicon.svg" alt="โลโก้คริสตจักร" class="church-logo" onerror="this.style.display='none';"></a>
     </div>
     <div class="header-text">
      <div class="ornament">
@@ -21,36 +21,40 @@
    <nav class="main-nav">
     <div class="container"><button class="nav-toggle" onclick="toggleMobileMenu()" aria-label="เปิดเมนู">☰</button>
      <ul id="main-nav" class="nav-list">
-      <li class="nav-item"><a href="../index.html" class="nav-link font-th">หน้าแรก | Home</a></li>
-      <li class="nav-item"><a href="../sermon/index.html" class="nav-link font-th">คำเทศนา | Sermon</a></li>
+      <li class="nav-item"><a href="https://www.tannatthaphon.online/index" class="nav-link font-th">หน้าแรก | Home</a></li>
+      <li class="nav-item"><a href="https://www.tannatthaphon.online/sermon/index.html" class="nav-link font-th">คำเทศนา | Sermon</a></li>
       <li class="nav-item"><span class="nav-link font-th nav-label">ข่าวสารและกิจกรรม | News</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="../news/event/index.html" class="dropdown-link font-th">ข่าวสารและกิจกรรม</a></li>
-        <li class="dropdown-item"><a href="../news/pray/index.html" class="dropdown-link font-th">หัวข้อฝากอธิษฐาน</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/event/index.html" class="dropdown-link font-th">ข่าวสารและกิจกรรม</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/pray/index.html" class="dropdown-link font-th">หัวข้อฝากอธิษฐาน</a></li>
        </ul></li>
       <li class="nav-item"><span class="nav-link font-th">ข้อมูลคริสตจักร | About</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="../about/history.html" class="dropdown-link font-th">ประวัติคริสตจักร</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/home/about-jdmbangkok/#vision" class="dropdown-link font-th">นิมิตและพัธกิจ</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/home/about-jdmbangkok/#doctrine" class="dropdown-link font-th">เป้าหมาย JDMBKK2026</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/home/about-jdmbangkok/personnel-jdmbangkok/" class="dropdown-link font-th">บุคลากร</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/about/history.html" class="dropdown-link font-th">ประวัติคริสตจักร</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/vision" class="dropdown-link font-th">นิมิตและพัธกิจ</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/doctrine" class="dropdown-link font-th">เป้าหมาย JDMBKK2026</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/personnel" class="dropdown-link font-th">บุคลากร</a></li>
        </ul></li>
       <li class="nav-item"><span class="nav-link font-th">กลุ่มเซลล์ | CellGroup</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/thummawut-leader/" class="dropdown-link font-th">1. ผู้นำ อาจารย์ธรรมวุฒิ</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/kun-ning-leader/" class="dropdown-link font-th">2. ผู้นำ คุณหนิง</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/kun-nooi-leader/" class="dropdown-link font-th">3. ผู้นำ คุณนุ้ย</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/kun-ling-leader/" class="dropdown-link font-th">4. ผู้นำ คุณหลิง</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/kun-mind-leader/" class="dropdown-link font-th">5. ผู้นำ คุณมายด์</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/kun-war-leader/" class="dropdown-link font-th">6. ผู้นำ คุณวอร์</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/gbs-thummawut/" class="dropdown-link font-th">7. GBS อาจารย์ธรรมวุฒิ</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/gbs-lee/" class="dropdown-link font-th">8. GBS อาจารย์ลี</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/gbs-ked/" class="dropdown-link font-th">9. GBS อาจารย์เกด</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/ravee-study-group/" class="dropdown-link font-th">10. กลุ่มระวีศึกษา</a></li>
-        <li class="dropdown-item"><a href="https://jdmbangkok.com/CellGroup/team-prayer-group/" class="dropdown-link font-th">11. กลุ่มทีมนมัสการ</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/thummawut-leader/" class="dropdown-link font-th">1. ผู้นำ อาจารย์ธรรมวุฒิ</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/kun-ning-leader/" class="dropdown-link font-th">2. ผู้นำ คุณหนิง</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/kun-nooi-leader/" class="dropdown-link font-th">3. ผู้นำ คุณนุ้ย</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/kun-ling-leader/" class="dropdown-link font-th">4. ผู้นำ คุณหลิง</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/kun-mind-leader/" class="dropdown-link font-th">5. ผู้นำ คุณมายด์</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/kun-war-leader/" class="dropdown-link font-th">6. ผู้นำ คุณวอร์</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/gbs-thummawut/" class="dropdown-link font-th">7. GBS อาจารย์ธรรมวุฒิ</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/gbs-lee/" class="dropdown-link font-th">8. GBS อาจารย์ลี</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/gbs-ked/" class="dropdown-link font-th">9. GBS อาจารย์เกด</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/ravee-study-group/" class="dropdown-link font-th">10. กลุ่มระวีศึกษา</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/team-pray-group/" class="dropdown-link font-th">11. กลุ่มทีมนมัสการ</a></li>
        </ul></li>
-      <li class="nav-item"><a href="../give.html" class="nav-link font-th">ถวายทรัพย์ | Give</a></li>
-      <li class="nav-item"><a href="https://jdmbangkok.com/contact/" class="nav-link font-th">ติดต่อเรา | Contact</a></li>
+      <li class="nav-item"><a href="https://www.tannatthaphon.online/give.html" class="nav-link font-th">ถวายทรัพย์ | Give</a></li>
+      <li class="nav-item"><span class="nav-link font-th">ติดต่อเรา | Contact</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
+       <ul class="dropdown-menu">
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/information" class="dropdown-link font-th">ข้อมูลคริสตจักร</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/message" class="dropdown-link font-th">ติดต่อเรา</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/pray" class="dropdown-link font-th">ฝากเราอธิษฐาน</a></li>
      </ul>
     </div>
    </nav>
