--- a/partials/header.html
+++ b/partials/header.html
@@ -22,15 +22,15 @@
     <div class="container"><button class="nav-toggle" onclick="toggleMobileMenu()" aria-label="เปิดเมนู">☰</button>
      <ul id="main-nav" class="nav-list">
       <li class="nav-item"><a href="https://www.tannatthaphon.online/index" class="nav-link font-th">หน้าแรก | Home</a></li>
-      <li class="nav-item"><a href="https://www.tannatthaphon.online/sermon/index.html" class="nav-link font-th">คำเทศนา | Sermon</a></li>
+      <li class="nav-item"><a href="https://www.tannatthaphon.online/sermon/index" class="nav-link font-th">คำเทศนา | Sermon</a></li>
       <li class="nav-item"><span class="nav-link font-th nav-label">ข่าวสารและกิจกรรม | News</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/event/index.html" class="dropdown-link font-th">ข่าวสารและกิจกรรม</a></li>
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/pray/index.html" class="dropdown-link font-th">หัวข้อฝากอธิษฐาน</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/event/index" class="dropdown-link font-th">ข่าวสารและกิจกรรม</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/pray/index" class="dropdown-link font-th">หัวข้อฝากอธิษฐาน</a></li>
        </ul></li>
       <li class="nav-item"><span class="nav-link font-th">ข้อมูลคริสตจักร | About</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/about/history.html" class="dropdown-link font-th">ประวัติคริสตจักร</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/information" class="dropdown-link font-th">ประวัติคริสตจักร</a></li>
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/vision" class="dropdown-link font-th">นิมิตและพัธกิจ</a></li>
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/doctrine" class="dropdown-link font-th">เป้าหมาย JDMBKK2026</a></li>
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/personnel" class="dropdown-link font-th">บุคลากร</a></li>
