--- a/partials/header.html
+++ b/partials/header.html
@@ -49,7 +49,7 @@
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/ravee-study-group/" class="dropdown-link font-th">10. กลุ่มระวีศึกษา</a></li>
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/CellGroup/team-pray-group/" class="dropdown-link font-th">11. กลุ่มทีมนมัสการ</a></li>
        </ul></li>
-      <li class="nav-item"><a href="https://www.tannatthaphon.online/give.html" class="nav-link font-th">ถวายทรัพย์ | Give</a></li>
+      <li class="nav-item"><a href="https://www.tannatthaphon.online/give" class="nav-link font-th">ถวายทรัพย์ | Give</a></li>
       <li class="nav-item"><span class="nav-link font-th">ติดต่อเรา | Contact</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/information" class="dropdown-link font-th">ข้อมูลคริสตจักร</a></li>
