--- a/partials/footer.html
+++ b/partials/footer.html
@@ -9,16 +9,16 @@
       <h3 class="footer-title font-th">เกี่ยวกับเรา</h3>
       <p class="footer-text font-th">คริสตจักรสาวกพระเยซูกรุงเทพ<br>
         ชุมชนแห่งความเชื่อที่รักพระเจ้า<br>
-        รักผู้คน และสร้างสาวก</p><img src="../assets/images/faicon.svg" alt="โลโก้" class="footer-logo" onerror="this.style.display='none';">
+        รักผู้คน และสร้างสาวก</p><img src="www.tannatthaphon.online/assets/images/faicon.svg" class="footer-logo" onerror="this.style.display='none';">
      </div><!-- Quick Links -->
      <div class="footer-section">
       <h3 class="footer-title font-th">ลิงก์ด่วน</h3>
       <ul class="footer-links">
-       <li><a href="https://jdmbangkok.com/sermon/" class="footer-link font-th">คำเทศนา</a></li>
-       <li><a href="https://jdmbangkok.com/home/news-and-events/christian-news/" class="footer-link font-th">ข่าวสารและกิจกรรม</a></li>
-       <li><a href="https://jdmbangkok.com/home/about-jdmbangkok/" class="footer-link font-th">ข้อมูลคริสตจักร</a></li>
-       <li><a href="https://jdmbangkok.com/give/" class="footer-link font-th">ถวายทรัพย์</a></li>
-       <li><a href="https://jdmbangkok.com/contact/" class="footer-link font-th">ติดต่อเรา</a></li>
+       <li><a href="https://www.tannatthaphon.online/sermon/index" class="footer-link font-th">คำเทศนา</a></li>
+       <li><a href="https://www.tannatthaphon.online/news/events/index=" class="footer-link font-th">ข่าวสารและกิจกรรม</a></li>
+       <li><a href="https://www.tannatthaphon.online/about/history=" class="footer-link font-th">ข้อมูลคริสตจักร</a></li>
+       <li><a href="https://www.tannatthaphon.online/give" class="footer-link font-th">ถวายทรัพย์</a></li>
+       <li><a href="https://www.tannatthaphon.online/contact/information" class="footer-link font-th">ติดต่อเรา</a></li>
       </ul>
      </div><!-- Contact Info -->
         <div class="footer-section">
