--- a/partials/header.html
+++ b/partials/header.html
@@ -26,14 +26,14 @@
       <li class="nav-item"><span class="nav-link font-th nav-label">ข่าวสารและกิจกรรม | News</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/event/index" class="dropdown-link font-th">ข่าวสารและกิจกรรม</a></li>
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/pray/index" class="dropdown-link font-th">หัวข้อฝากอธิษฐาน</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/news/pray" class="dropdown-link font-th">หัวข้อฝากอธิษฐาน</a></li>
        </ul></li>
       <li class="nav-item"><span class="nav-link font-th">ข้อมูลคริสตจักร | About</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/information" class="dropdown-link font-th">ประวัติคริสตจักร</a></li>
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/vision" class="dropdown-link font-th">นิมิตและพัธกิจ</a></li>
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/doctrine" class="dropdown-link font-th">เป้าหมาย JDMBKK2026</a></li>
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/home/about/personnel" class="dropdown-link font-th">บุคลากร</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/about/history" class="dropdown-link font-th">ประวัติคริสตจักร</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/about/vision" class="dropdown-link font-th">นิมิตและพัธกิจ</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/about/doctrine" class="dropdown-link font-th">เป้าหมาย JDMBKK2026</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/about/personnel" class="dropdown-link font-th">บุคลากร</a></li>
        </ul></li>
       <li class="nav-item"><span class="nav-link font-th">กลุ่มเซลล์ | CellGroup</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
