--- a/partials/header.html
+++ b/partials/header.html
@@ -52,11 +52,12 @@
       <li class="nav-item"><a href="https://www.tannatthaphon.online/give" class="nav-link font-th">ถวายทรัพย์ | Give</a></li>
       <li class="nav-item"><span class="nav-link font-th" onclick="toggleDropdown(event)">ติดต่อเรา | Contact</span> <button class="dropdown-toggle" onclick="toggleDropdown(event)" aria-label="เปิดเมนูย่อย"></button>
        <ul class="dropdown-menu">
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/information" class="dropdown-link font-th">ข้อมูลคริสตจักร</a></li>
-        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/message" class="dropdown-link font-th">ติดต่อเรา</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/information" class="dropdown-link font-th">ติดต่อเรา</a></li>
+        <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/message" class="dropdown-link font-th">ส่งข้อความถึงเรา</a></li>
         <li class="dropdown-item"><a href="https://www.tannatthaphon.online/contact/pray" class="dropdown-link font-th">ฝากเราอธิษฐาน</a></li>
      </ul>
     </div>
    </nav>
    <div class="header-top-border"></div>
   </header>
+
