--- a/partials/cookie-banner.html
+++ b/partials/cookie-banner.html
@@ -1,13 +1,15 @@
-<div id="cookie-banner" class="cookie-banner" role="dialog" aria-live="polite">
-  <p id="cookie-text">
-    เว็บไซต์นี้ใช้คุกกี้เพื่อปรับปรุงประสบการณ์การใช้งาน
-    <a id="privacy-link" href="/privacy-policy.html">
-      อ่านนโยบายความเป็นส่วนตัว
+<div id="cookieBanner" class="cookie-banner font-th" hidden>
+  <p>
+    เว็บไซต์นี้ใช้คุกกี้เพื่อปรับปรุงประสบการณ์การใช้งาน  
+    <a href="https://www.tannatthaphon.online/privacy-policy" target="_blank">
+      นโยบายความเป็นส่วนตัว
+    </a> |
+    <a href="https://www.tannatthaphon.online/terms-of-service" target="_blank">
+      ข้อกำหนดการใช้งาน
     </a>
   </p>
 
-  <div class="cookie-actions">
-    <button id="cookie-accept">ยอมรับทั้งหมด</button>
-    <button id="cookie-reject">ปฏิเสธคุกกี้ที่ไม่จำเป็น</button>
-  </div>
+  <button class="cookie-accept" onclick="acceptCookies()">
+    ยอมรับ
+  </button>
 </div>
