--- a/partials/footer.html
+++ b/partials/footer.html
@@ -30,9 +30,19 @@
          </div>
     </div>
    </div>
+          <ul class="footer-links font-th">
+  <li>
+    <a href="/privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
+  </li>
+  <li>
+    <a href="/terms-of-service.html">ข้อกำหนดการใช้งาน</a>
+  </li>
+</ul>
+
     <div class="footer-bottom">
      <p class="footer-bottom-text font-th">© 2024 คริสตจักรสาวกพระเยซูกรุงเทพ. สงวนลิขสิทธิ์.</p>
     </div>
 
      
   </footer>
+
