--- a/partials/footer.html
+++ b/partials/footer.html
@@ -31,8 +31,8 @@
     </div>
    </div>
           <ul class="footer-links font-th">
-    <a href="/privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
-    <a href="/terms-of-service.html">ข้อกำหนดการใช้งาน</a>
+    <small><a href="/privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
+    <a href="/terms-of-service.html">ข้อกำหนดการใช้งาน</a></small>
 </ul>
 
     <div class="footer-bottom">
@@ -42,5 +42,6 @@
 
      
   </footer>
+
 
 
