--- a/partials/footer.html
+++ b/partials/footer.html
@@ -30,18 +30,19 @@
          </div>
     </div>
    </div>
-          <ul class="footer-links font-th">
-    <small><a href="/privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
-    <a href="/terms-of-service.html">ข้อกำหนดการใช้งาน</a></small>
-</ul>
-
+          <!-- Footer Bottom -->
+     <div class="footer-bottom">
+      <div class="footer-policy-links">
+       <a href="https://www.tannatthaphon.online/privacy-policy" class="footer-policy-link font-th">นโยบายความเป็นส่วนตัว</a>
+       <a href="https://www.tannatthaphon.online/terms-of-service" class="footer-policy-link font-th">ข้อกำหนดและเงื่อนไขการใช้งาน</a>
+      </div>
+     </div>
     <div class="footer-bottom">
      <p class="footer-bottom-text font-th">© 2024 คริสตจักรสาวกพระเยซูกรุงเทพ. สงวนลิขสิทธิ์.</p>
     </div>
-          <div data-include="https://www.tannatthaphon.online/partials/cookie-banner.html"></div>
-
-     
   </footer>
+  </footer>
+
 
 
 
