--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,22 @@ body {
       display: inline-block;
       width: 100%;
     }
+     .section-title h1 {
+  font-size: 30px;
+  font-weight: 800;
+  text-align: center;
+  line-height: 1.3;
+}
+
+.section-title h1 span {
+  display: block;
+}
+
+.section-title h1 small {
+  font-size: 70%;
+  font-weight: 500;
+  opacity: 0.85;
+}
 
     .section-title::after {
       content: '';
